添加参数加密功能